# PhysicsSimulator

./: .gitignore  CMakeLists.txt  README.md  input_config.json
include/SDL3/: SDL_revision.h
include/glad/: glad.h
include/graphics/: FragmentShader.glsl  GraphicsModel.hpp  InputManager.hpp  Simulation.hpp  SphereModel.hpp  VertexShader.glsl  utils.hpp
include/physics/: Geometry.hpp  ODESolver.hpp  RigidBodies.hpp  RigidBody.hpp  Solvers.hpp  Sphere.hpp  System.hpp
lib/: libGLEW.2.2.0.dylib
src/: CollisionSystem.cpp  glad.c  main.cpp  main_ode_test.cpp  main_simulation.cpp
src/graphics/: BoxModel.cpp  Camera.cpp  GraphicsModel.cpp  GridModel.cpp  InputManager.cpp  NormalVectorModel.cpp  SeparatingPlaneModel.cpp  Simulation.cpp  SphereModel.cpp  utils.cpp
src/physics/: AABB.cpp  AABBTree.cpp  Ball.cpp  BoxGeometry.cpp  EulerSolver.cpp  ForceGenerator.cpp  Geometry.cpp  RigidBody.cpp  RungeKuttaSolver.cpp  SATCollisionDetector.cpp  Solvers.cpp  Sphere.cpp  StaticBody.cpp  System.cpp  TestRigidBody.cpp
